@@ -19,3 +19,4 @@ __title__ = "nbdhelper"
 __version__ = "0.1"
 
 from .nbdhelper import nbdClient
+from .nbdhelper import nbdConnUnix, nbdConnTCP
